2012-05-20 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/{parray_table.tcl,http_accept.tcl}: new commands for printing arrays in HTML tables and
    parsing of Accept HTTP header lines
    * rivet/packages/entities/entities.tcl: backport from trunk of package RivetEntities
    * doc/xml/entities.xml: page manual for package RivetEntities
    * doc/xml/commands.xml: new manual page for http_accept
    * src/apache-2/mod_rivet.c: if RIVET_DISPLAY_VERSION is defined then the symbol RIVET_SERVER is
    stored in the 'server' array
    * configure.ac,VERSION: Rivet version is now 2.0.5
    * tclconfig/ltmain.sh: updated from recent autotools installation

2012-05-17 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio.tcl: fixed SQL syntax that would break compatibility with Oracle (Fixes reopened
    bug #53222)

2012-05-13 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/tclrivet/tclrivetparser.tcl: Tcl parser implements new shorthand echo syntax (closes
    bug #53217)
    * rivet/packages/tclrivet/parse.tcl: auto_path handling improved as suggested in bug #52898
    * doc/xml/commands.xml: improved manual entry for 'var list' (Fixes bug #52911)
 
2012-05-12 Massimo Manghi <mxmanghi@apache.org>
    * src/rivetParser.c: add shorthand expression <?= ... ?> for <? puts -nonewline "..." ?> (contributed 
    by Jeff Lawson,addresses #53217, tclrivetparser yet to be fixed)
    * tests/shorthand.[test|rvt]: add test of shorthand notation for string output 
    * rivet/rivet-tcl/cookie.tcl: add support for HttpOnly flag (contributed by Cyril Shtumf, 
    fixes bug #53224)
    * rivet/packages/session/session-class.tcl: support for HttpOnly flag improves security and reduces
    the risk of cross-site scripting attacks (contributed by Cyril Shtumf, fixes #52224)
    * rivet/packages/dio/dio.tcl: wrong SQL syntax generated in delete method when multiple fields are